--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -140,15 +140,16 @@
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-const supabaseUrl = 'https://hhtyooxjegjcrxzssxhj.supabase.co'
+const supabaseUrl = 'https://hhtyooxjegjcrxzssxhj.supabase.co' <!-- w supabase wybierasz projekt np. ELEKTRYCY, po lewej na dole wybieraz USTAWIENIA i tam DATA API i tam URL  -->
 const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhodHlvb3hqZWdqY3J4enNzeGhqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY0Njg1MjksImV4cCI6MjA2MjA0NDUyOX0.GU9qfVMMYmA6B-jKfHES6k5OvQswnUA2FADKq92k5x8'
-const supabase = createClient(supabaseUrl, supabaseKey)
+ <!--  w supabase wybierasz projekt np. ELEKTRYCY, po lewej na dole wybieraz USTAWIENIA i tam API KEYS i tam LEGACY ANON-->
+  const supabase = createClient(supabaseUrl, supabaseKey)
 
 document.getElementById('register-form').addEventListener('submit', async (e) => {
   e.preventDefault();
   document.getElementById('loading').style.display = 'block';
 
-  const imie = document.getElementById('imie').value
+  const imie = document.getElementById('imie').value 
   const nazwisko = document.getElementById('nazwisko').value
   const miasto = document.getElementById('miasto').value
   const wojewodztwo = document.getElementById('wojewodztwo').value
