--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+//Należy ustawić Auth 》URL supabase (na localhost: http://localhost:5500)
+//Site URL: 
+//https://twoja-domena.pl
+//Redirect URLs: 
+//https://twoja-domena.pl
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Logowanie Google i Email</title>
