--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -84,7 +84,7 @@
 
 <script>
 /* ================= SUPABASE ================= */
-const supabaseUrl = 'https://TWOJ_PROJECT_ID.supabase.co';
+const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co";
 const supabaseKey = 'TWOJ_PUBLIC_ANON_KEY';
 const supabase = supabaseJs.createClient(supabaseUrl, supabaseKey);
 
