--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -85,7 +85,7 @@
 <script>
 /* ================= SUPABASE ================= */
 const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co";
-const supabaseKey = 'TWOJ_PUBLIC_ANON_KEY';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
 const supabase = supabaseJs.createClient(supabaseUrl, supabaseKey);
 
 /* ================= MODAL ================= */
