--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,9 +1,9 @@
 
-//Należy ustawić Auth 》URL supabase (na localhost: http://localhost:5500)
-//Site URL: 
-//https://twoja-domena.pl
-//Redirect URLs: 
-//https://twoja-domena.pl
+/*Należy ustawić Auth 》URL supabase (na localhost: http://localhost:5500)
+Site URL: 
+https://twoja-domena.pl
+Redirect URLs: 
+https://twoja-domena.pl*/
 <!DOCTYPE html>
 <html lang="pl">
 <head>
