--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -3,7 +3,10 @@
 Site URL: 
 https://twoja-domena.pl
 Redirect URLs: 
-https://twoja-domena.pl-->
+https://twoja-domena.pl
+supabase-Project-Authentication-Url configuration-site url-->
+
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
