--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -68,7 +68,7 @@ supabase-Project-Authentication-Url configuration-site url-->
   </style>
 
   <!-- Supabase -->
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
 </head>
 
 <body>
