--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -177,13 +177,81 @@ supabaseClient.auth.onAuthStateChange((event, session) => {
   }
 })();
 </script>
-/*------------------'*/
+<!-- SUPABASE CDN () usun-->
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
 
 <script>
 const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
-const supabaseKey = 'TU_WKLEJ_SWÓJ_SUPABASE_ANON_KEY';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
+
+const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+/* ================= MODAL ================= */
+function openModal() {
+  document.getElementById('loginModal').style.display = 'flex';
+}
+
+window.onclick = (e) => {
+  const modal = document.getElementById('loginModal');
+  if (e.target === modal) modal.style.display = 'none';
+};
+
+/* ================= LOGOWANIE ================= */
+async function loginGoogle() {
+  const { error } = await supabaseClient.auth.signInWithOAuth({
+    provider: 'google',
+    options: {
+      redirectTo: window.location.origin
+    }
+  });
+
+  if (error) alert(error.message);
+}
+
+async function loginWithEmail() {
+  const email = document.getElementById('email').value;
+  if (!email) return alert('Podaj email');
+
+  const { error } = await supabaseClient.auth.signInWithOtp({ email });
+
+  if (error) alert(error.message);
+  else {
+    alert('Sprawdź email i kliknij link logowania');
+    document.getElementById('loginModal').style.display = 'none';
+  }
+}
+
+/* ================= IKONA UŻYTKOWNIKA ================= */
+function updateUserIcon(email) {
+  const letter = email.charAt(0).toUpperCase();
+  document.getElementById('loginIcon').innerHTML = `
+    <div style="
+      width:32px;
+      height:32px;
+      border-radius:50%;
+      background:#4285F4;
+      color:white;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:bold;">
+      ${letter}
+    </div>`;
+}
+
+/* ================= SESJA ================= */
+supabaseClient.auth.onAuthStateChange((event, session) => {
+  if (session?.user?.email) {
+    updateUserIcon(session.user.email);
+    document.getElementById('loginModal').style.display = 'none';
+  }
+});
+
+(async () => {
+  const { data: { session } } = await supabaseClient.auth.getSession();
+  if (session?.user?.email) {
+    updateUserIcon(session.user.email);';
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
 // Email login
@@ -215,6 +283,8 @@ supabaseClient.auth.onAuthStateChange((event, session) => {
   }
 });
 </script>
-/*__________*/
+
+<!-- SUPABASE CDN usun -->
+
 </body>
 </html>
